--- a/index2.html
+++ b/index2.html
@@ -1,1 +1,174 @@
+<!DOCTYPE html>
+<html lang="zh-CN">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>中医诊断系统</title>
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      background-color: #f4f4f9;
+      margin: 0;
+      padding: 20px;
+    }
+    h1, h2 {
+      text-align: center;
+    }
+    .container {
+      max-width: 800px;
+      margin: 0 auto;
+      background: white;
+      padding: 20px;
+      border-radius: 8px;
+      box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+    }
+    .symptoms {
+      display: flex;
+      flex-wrap: wrap;
+      gap: 10px;
+      margin-bottom: 20px;
+    }
+    .symptoms button {
+      padding: 10px 20px;
+      border: none;
+      border-radius: 20px;
+      cursor: pointer;
+    }
+    .symptoms button.selected {
+      background-color: #4caf50;
+      color: white;
+    }
+    .btn-diagnose {
+      display: block;
+      width: 100%;
+      padding: 10px 20px;
+      background-color: #4caf50;
+      color: white;
+      text-align: center;
+      border: none;
+      border-radius: 8px;
+      cursor: pointer;
+      font-size: 16px;
+    }
+    .result {
+      margin-top: 20px;
+      background: #f9f9f9;
+      padding: 20px;
+      border-radius: 8px;
+      border-left: 5px solid #4caf50;
+    }
+    .warning {
+      color: red;
+      margin-top: 20px;
+      text-align: center;
+    }
+  </style>
+</head>
+<body>
+  <div class="container">
+    <h1>中医诊断系统</h1>
+    <h2>请选择症状（可多选）：</h2>
+    <div class="symptoms" id="symptoms-container"></div>
+    <button class="btn-diagnose" onclick="diagnose()">诊断</button>
+    <p class="warning" id="warning"></p>
+    <div class="result" id="result" style="display: none;"></div>
+  </div>
 
+  <script>
+    const symptomsData = {
+      taiyang: {
+        symptoms: ['发热', '头痛', '恶寒', '脉浮', '无汗', '有汗'],
+        prescriptions: {
+          noSweat: {
+            name: '麻黄汤',
+            herbs: ['麻黄', '桂枝', '杏仁', '甘草'],
+            description: '用于发热恶寒，无汗而喘的太阳表实证。',
+          },
+          withSweat: {
+            name: '桂枝汤',
+            herbs: ['桂枝', '芍药', '生姜', '大枣', '甘草'],
+            description: '用于发热汗出，恶风的太阳表虚证。',
+          },
+        },
+      },
+      yangming: {
+        symptoms: ['发热', '口渴', '汗出', '便秘', '腹满'],
+        prescriptions: {
+          constipation: {
+            name: '大承气汤',
+            herbs: ['大黄', '厚朴', '枳实', '芒硝'],
+            description: '用于阳明腑实证，症见便秘、腹满。',
+          },
+        },
+      },
+    };
+
+    const selectedSymptoms = [];
+    const symptomsContainer = document.getElementById('symptoms-container');
+    const resultDiv = document.getElementById('result');
+    const warningDiv = document.getElementById('warning');
+
+    // 初始化症状按钮
+    Object.values(symptomsData).forEach((data) => {
+      data.symptoms.forEach((symptom) => {
+        const button = document.createElement('button');
+        button.textContent = symptom;
+        button.onclick = () => toggleSymptom(symptom, button);
+        symptomsContainer.appendChild(button);
+      });
+    });
+
+    function toggleSymptom(symptom, button) {
+      if (selectedSymptoms.includes(symptom)) {
+        selectedSymptoms.splice(selectedSymptoms.indexOf(symptom), 1);
+        button.classList.remove('selected');
+      } else {
+        selectedSymptoms.push(symptom);
+        button.classList.add('selected');
+      }
+    }
+
+    function diagnose() {
+      warningDiv.textContent = '';
+      resultDiv.style.display = 'none';
+
+      if (selectedSymptoms.length < 2) {
+        warningDiv.textContent = '请至少选择两个症状进行诊断';
+        return;
+      }
+
+      let bestMatch = null;
+      let matchedPrescription = null;
+
+      Object.entries(symptomsData).forEach(([syndrome, data]) => {
+        const matches = selectedSymptoms.filter((s) => data.symptoms.includes(s)).length;
+        if (matches >= 2) {
+          bestMatch = syndrome;
+
+          // 具体诊断逻辑
+          if (syndrome === 'taiyang') {
+            matchedPrescription = selectedSymptoms.includes('无汗')
+              ? data.prescriptions.noSweat
+              : data.prescriptions.withSweat;
+          } else if (syndrome === 'yangming') {
+            matchedPrescription = data.prescriptions.constipation;
+          }
+        }
+      });
+
+      if (bestMatch && matchedPrescription) {
+        resultDiv.style.display = 'block';
+        resultDiv.innerHTML = `
+          <h3>诊断结果：</h3>
+          <p>证型：${bestMatch}</p>
+          <p>推荐方剂：${matchedPrescription.name}</p>
+          <p>组成：${matchedPrescription.herbs.join('、')}</p>
+          <p>说明：${matchedPrescription.description}</p>
+        `;
+      } else {
+        warningDiv.textContent = '无法诊断，请重新选择症状';
+      }
+    }
+  </script>
+</body>
+</html>
