--- a/index2.html
+++ b/index2.html
@@ -76,9 +76,6 @@
 
   <script>
     const symptomsData = {
-      common: {
-        symptoms: ['发热', '恶寒', '头痛', '脉浮', '无汗', '有汗', '咳嗽', '口渴', '胸胁苦满', '腹满', '便秘', '口苦'],
-      },
       taiyang: {
         symptoms: ['发热', '恶寒', '无汗', '脉浮'],
         prescriptions: {
@@ -104,16 +101,6 @@
           },
         },
       },
-      shaoyang: {
-        symptoms: ['往来寒热', '胸胁苦满', '口苦', '咽干', '目眩'],
-        prescriptions: {
-          default: {
-            name: '小柴胡汤',
-            herbs: ['柴胡', '黄芩', '人参', '甘草', '半夏', '生姜', '大枣'],
-            description: '用于和解少阳的往来寒热证。',
-          },
-        },
-      },
     };
 
     const selectedSymptoms = [];
@@ -122,11 +109,13 @@
     const warningDiv = document.getElementById('warning');
 
     // 初始化症状按钮
-    symptomsData.common.symptoms.forEach((symptom) => {
-      const button = document.createElement('button');
-      button.textContent = symptom;
-      button.onclick = () => toggleSymptom(symptom, button);
-      symptomsContainer.appendChild(button);
+    Object.values(symptomsData).forEach((data) => {
+      data.symptoms.forEach((symptom) => {
+        const button = document.createElement('button');
+        button.textContent = symptom;
+        button.onclick = () => toggleSymptom(symptom, button);
+        symptomsContainer.appendChild(button);
+      });
     });
 
     function toggleSymptom(symptom, button) {
@@ -143,44 +132,31 @@
       warningDiv.textContent = '';
       resultDiv.style.display = 'none';
 
-      if (selectedSymptoms.length < 2) {
-        warningDiv.textContent = '请至少选择两个症状进行诊断';
+      if (selectedSymptoms.length === 0) {
+        warningDiv.textContent = '请至少选择一个症状进行诊断';
         return;
       }
 
-      let bestMatch = null;
       let matchedPrescription = null;
 
-      Object.entries(symptomsData).forEach(([syndrome, data]) => {
-        if (syndrome === 'common') return; // 跳过公共症状部分
-        const matches = selectedSymptoms.filter((s) => data.symptoms.includes(s)).length;
-        if (matches >= 2) {
-          bestMatch = syndrome;
-
-          // 具体诊断逻辑
-          if (syndrome === 'taiyang') {
-            matchedPrescription = selectedSymptoms.includes('无汗')
-              ? data.prescriptions.noSweat
-              : data.prescriptions.withSweat;
-          } else if (syndrome === 'yangming') {
-            matchedPrescription = data.prescriptions.constipation;
-          } else if (syndrome === 'shaoyang') {
-            matchedPrescription = data.prescriptions.default;
-          }
+      for (const [syndrome, data] of Object.entries(symptomsData)) {
+        const match = selectedSymptoms.some((symptom) => data.symptoms.includes(symptom));
+        if (match) {
+          matchedPrescription = Object.values(data.prescriptions)[0];
+          break;
         }
-      });
+      }
 
-      if (bestMatch && matchedPrescription) {
+      if (matchedPrescription) {
         resultDiv.style.display = 'block';
         resultDiv.innerHTML = `
           <h3>诊断结果：</h3>
-          <p>证型：${bestMatch}</p>
           <p>推荐方剂：${matchedPrescription.name}</p>
           <p>组成：${matchedPrescription.herbs.join('、')}</p>
           <p>说明：${matchedPrescription.description}</p>
         `;
       } else {
-        warningDiv.textContent = '无法诊断，请重新选择症状';
+        warningDiv.textContent = '未匹配到具体诊断，请重新选择症状';
       }
     }
   </script>
