--- a/index2.html
+++ b/index2.html
@@ -76,27 +76,46 @@
 
   <script>
     const symptomsData = {
-      taiyang: {
+      太阳病: {
         symptoms: ['发热', '恶寒', '无汗', '脉浮'],
         prescriptions: {
-          noSweat: {
+          麻黄汤: {
             name: '麻黄汤',
-            herbs: ['麻黄', '桂枝', '杏仁', '甘草'],
-            description: '用于发热恶寒，无汗而喘的太阳表实证。',
+            herbs: [
+              { name: '麻黄', amount: '9克' },
+              { name: '桂枝', amount: '6克' },
+              { name: '杏仁', amount: '9克' },
+              { name: '甘草', amount: '3克' },
+            ],
+            usage: '将药材加水煎煮30分钟，分两次服用，温服。',
+            description: '用于太阳表实证，症见发热恶寒，无汗而喘。',
           },
-          withSweat: {
+          桂枝汤: {
             name: '桂枝汤',
-            herbs: ['桂枝', '芍药', '生姜', '大枣', '甘草'],
-            description: '用于发热汗出，恶风的太阳表虚证。',
+            herbs: [
+              { name: '桂枝', amount: '9克' },
+              { name: '芍药', amount: '9克' },
+              { name: '甘草', amount: '6克' },
+              { name: '生姜', amount: '9克' },
+              { name: '大枣', amount: '3枚' },
+            ],
+            usage: '将药材加水煎煮30分钟，分两次服用，温服。',
+            description: '用于太阳表虚证，症见发热汗出，恶风。',
           },
         },
       },
-      yangming: {
-        symptoms: ['发热', '口渴', '汗出', '腹满', '便秘'],
+      阳明病: {
+        symptoms: ['发热', '口渴', '便秘', '腹满'],
         prescriptions: {
-          constipation: {
+          大承气汤: {
             name: '大承气汤',
-            herbs: ['大黄', '厚朴', '枳实', '芒硝'],
+            herbs: [
+              { name: '大黄', amount: '12克' },
+              { name: '厚朴', amount: '9克' },
+              { name: '枳实', amount: '9克' },
+              { name: '芒硝', amount: '6克' },
+            ],
+            usage: '将药材加水煎煮40分钟，趁热服用一次。',
             description: '用于阳明腑实证，症见便秘、腹满。',
           },
         },
@@ -109,8 +128,8 @@
     const warningDiv = document.getElementById('warning');
 
     // 初始化症状按钮
-    Object.values(symptomsData).forEach((data) => {
-      data.symptoms.forEach((symptom) => {
+    Object.keys(symptomsData).forEach((syndrome) => {
+      symptomsData[syndrome].symptoms.forEach((symptom) => {
         const button = document.createElement('button');
         button.textContent = symptom;
         button.onclick = () => toggleSymptom(symptom, button);
@@ -137,22 +156,30 @@
         return;
       }
 
+      let bestMatch = null;
       let matchedPrescription = null;
 
-      for (const [syndrome, data] of Object.entries(symptomsData)) {
-        const match = selectedSymptoms.some((symptom) => data.symptoms.includes(symptom));
-        if (match) {
+      Object.entries(symptomsData).forEach(([syndrome, data]) => {
+        const matches = selectedSymptoms.filter((s) => data.symptoms.includes(s)).length;
+        if (matches >= 2) {
+          bestMatch = syndrome;
           matchedPrescription = Object.values(data.prescriptions)[0];
-          break;
         }
-      }
+      });
 
       if (matchedPrescription) {
         resultDiv.style.display = 'block';
         resultDiv.innerHTML = `
           <h3>诊断结果：</h3>
+          <p>证型：${bestMatch}</p>
           <p>推荐方剂：${matchedPrescription.name}</p>
-          <p>组成：${matchedPrescription.herbs.join('、')}</p>
+          <p>组成：</p>
+          <ul>
+            ${matchedPrescription.herbs
+              .map((herb) => `<li>${herb.name}：${herb.amount}</li>`)
+              .join('')}
+          </ul>
+          <p>用法：${matchedPrescription.usage}</p>
           <p>说明：${matchedPrescription.description}</p>
         `;
       } else {
